# webtoolkit

./: pyproject.toml
webtoolkit/framework/django/: core.py  route.py  views.py
webtoolkit/openapi/: construct.py  core.py
