[tool.poetry]
name = "webtoolkit"
version = "0.1.0"
description = ""
authors = ["JonarsLi <jonarsli13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.8"
django = {version = "^4.2.1", optional = true}

[tool.poetry.extras]
django = ["django"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120